Fix SonarCloud violations in xray-exporter